# ai-fungeon-api

./: .gitattributes  .gitignore  LICENSE  Readme.md  pyproject.toml  pytest.ini  requirements.txt  sample.env
.github/workflows/: ci.yml  lint.yml
ai_fungeon_api/: __init__.py  views.py
ai_fungeon_api/services/: ai_chat_service.py
ai_fungeon_api/static/: demo.html
ai_fungeon_api/views/: root.py
tests/: conftest.py  test_root.py
tests/cassettes/test_root/: test_index.yaml
